2010-03-02 yusei
* Remove short title.

2009-04-18 Kazuhiko
* Version 5.4.1

2008-11-13 yusei
* Start to develop version 5.4.

2008-10-24 yusei
* Convert return value of render_pdf to string explicitly. It might return non-string value.

2008-10-14 yusei
* Start to develop version 5.3.

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-04-17 yusei
* Revise version to 5.0.

2008-04-04 Thibaut
add rendering OOoChart
Image support improvement

2007-10-30 Jerome
Add macros for deferred rendering in report_view

2007-08-24 Ibou NDIAYE
Initial revision