@@ -1,3 +1,6 @@
+2011-02-17 Kazuhiko
+* add Base_viewODTStyleFieliLibray and put my_title there.
+
 2010-03-02 yusei
 * Remove short title.
 
